# covid19

./: .gitignore  LICENSE  README.md  pyproject.toml
covid19/: __init__.py  data.py  web.py
covid19/static/: pivotui_template.html
